src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__movie_details_ui__movie_details_ui_tests__tests__snapshot_tests__movie_details_render_ManualSearchSortPrompt.snap
---
source: src/ui/radarr_ui/library/movie_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Movie Info  ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Cast │ Crew │ Manual Search                                                                   │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │   Source    Age        ⛔     Title                 Indexer                Size         Peers        Language Quality     │                     
                    │=> torrent   12 days    ⛔     Some movie release    The Pirate Bay         0.0 MB       25 / 3       English  HD - 1080p  │                     
                    │   usenet    22 days    ⛔     Some Other movie rele The Pirate Bay         0.0 MB                    English  HD - 1080p  │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                 ╭──────────────────────╮                                                 │                     
                    │                                                 │Something             │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 │                      │                                                 │                     
                    │                                                 ╰──────────────────────╯                                                 │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
